--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,9 @@
   <title>Jay Kumar Gupta| Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js"> 
 
-  <meta itemprop="name" content="Jay Gupta | Portfolio"> 
+  <meta itemprop="name" content="Jay Kumar Gupta | Portfolio"> 
   <meta itemprop="description" content="Self Developed personal website build with React.js">
- 
-  <meta property="og:url" content="https://soumyajit.vercel.app">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
- 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+
  
 </head>
 
